tests/NormalTests/paczka2/big_fuzzy/33243301.err
Error in line 1: LMi4HB S188 17,4
Error in line 4: LMi4HB S991 22,5
Error in line 5: LMi4HB S20 69,1
Error in line 12: LMi4HB A140 28,2
Error in line 17: A140 S20 54,8
Error in line 25: LMi4HB S188 -5,5
Error in line 24: y39FvFDxtaj S991 70,6
Error in line 34: LMi4HB S188 78,4
Error in line 44: W1lsjVNkn S20 138,71
Error in line 43: y39FvFDxtaj A140 56,9
Error in line 41: W1lsjVNkn S20 44,4
Error in line 51: W1lsjVNkn A140 8,3
Error in line 48: LMi4HB S991 65,3
Error in line 61: y39FvFDxtaj S20 98,5
Error in line 62: LMi4HB S991 32,2
Error in line 66: r3n A140 79,00
Error in line 58: r3n A140 17,1
Error in line 64: LMi4HB A140 88,2
Error in line 70: r3n S188 29,0
Error in line 74: r3n A140 78,3
Error in line 85: A140 A140 31,4
Error in line 86: A140 S188 60,8
Error in line 93: r3n S20 4,9
Error in line 91: LMi4HB S991 63,6
Error in line 98: LMi4HB S188 49,5
Error in line 103: LMi4HB S188 3n,0
Error in line 90: A140 S991 28,5
Error in line 102: LMi4HB A140 32,2
Error in line 105: A140 A140 93,3
Error in line 108: W1lsjVNkn A140 11,5
Error in line 110: W1lsjVNkn S991 74,3
Error in line 78: 3GUD S20 3,3
Error in line 115: kSczsLI6sq A140 37,3
Error in line 156: LMi4HB S991 32,9
Error in line 170: LMi4`B S188 25,6
Error in line 169: y39FvFDxtaj S20 81,8
Error in line 198: r3n A140 6,6
Error in line 208: LMi4HB S188 11,5
Error in line 212: kSczsLI6sq S991 47,7
Error in line 211: LMi4HB S20 22,5
Error in line 190: y39FvFDxtaj A140 42,9
Error in line 218: 3GUD A140 219,9
Error in line 227: A140 S188 159,9
Error in line 229: A140 A140 73,3
Error in line 246: 3GUD S20 75,2
